log
Thu 24 Aug 2023 02:54:12 PM UTC: 
 list.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:56:16: error: ‘List’ {aka ‘struct List’} has no member named ‘actual’
   56 |     while (list->actual!=NULL){
      |                ^~
Compilation failed
239a3f1
Thu 24 Aug 2023 04:14:10 PM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:54:9: error: unused variable ‘actual’ [-Werror=unused-variable]
   54 |   Node *actual=list->head;
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
61980ae
Thu 24 Aug 2023 04:14:32 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
62a2f3a
Thu 24 Aug 2023 04:18:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
de6998a
Thu 24 Aug 2023 04:21:10 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
d1d0c5a
Thu 24 Aug 2023 04:21:51 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:9: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   48 |     list->prev = list->current;
      |         ^~
Compilation failed
88ff615
Thu 24 Aug 2023 04:23:37 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
63895c9
Thu 24 Aug 2023 04:24:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:54:1: error: expected identifier or ‘(’ before ‘}’ token
   54 | }
      | ^
Compilation failed
a06552c
Thu 24 Aug 2023 04:25:10 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
1094eca
Thu 24 Aug 2023 04:25:55 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
8105519
Thu 24 Aug 2023 04:28:39 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:9: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   48 |     list->prev = list->current;
      |         ^~
Compilation failed
5b677e3
Thu 24 Aug 2023 04:29:04 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
ba1897f
Thu 24 Aug 2023 04:31:58 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
55f2005
